add: spring_session table 자동 생성을 위한 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
   profiles:
     include: oauth
 
+  session:
+    jdbc:
+      initialize-schema: always
+
 server:
   servlet:
     session:
